objects/Contract_Pricing_Terms__c.object
<CustomObject>
    <fields>
        <fullName>Pricing_Failure__c</fullName>
        <formula>IF( OR(ISBLANK(Price_Incr_Cap_Amt__c),ISBLANK(TEXT(Price_Incr_Cap_Type_Unit__c)),ISBLANK(TEXT(Price_Incr_Cap_App_Level__c)),AND(TEXT(Price_Incr_Cap_App_Level__c)=&quot;Discrete SKU&quot;,ISBLANK(TEXT(Price_Incr_Cap_Calc_Scope__c)))) , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pricing Failure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Private_Brand__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Private Brand</description>
        <label>Private Brand</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Relevant_Customer_Level__c</fullName>
        <label>Relevant Customer Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Grandparent</fullName>
                </value>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Standalone</fullName>
                </value>
                <value>
                    <fullName>GreatGrandParent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Required_Timing_Of_CC_Updates__c</fullName>
        <inlineHelpText>If contract silent, enter None</inlineHelpText>
        <label>Required Timing Of CC Updates</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Awaiting Information</fullName>
                    <default>true</default>
                    <label>Awaiting Information</label>
                </value>
                <value>
                    <fullName>None/Contract Silent</fullName>
                </value>
                <value>
                    <fullName>Jan</fullName>
                </value>
                <value>
                    <fullName>Feb</fullName>
                </value>
                <value>
                    <fullName>Mar</fullName>
                </value>
                <value>
                    <fullName>Apr</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>Jun</fullName>
                </value>
                <value>
                    <fullName>Jul</fullName>
                </value>
                <value>
                    <fullName>Aug</fullName>
                </value>
                <value>
                    <fullName>Sep</fullName>
                </value>
                <value>
                    <fullName>Oct</fullName>
                </value>
                <value>
                    <fullName>Nov</fullName>
                </value>
                <value>
                    <fullName>Dec</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Second_cap_basis__c</fullName>
        <label>Second cap basis</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Letter_Required_For_CC_Increase__c</fullName>
        <label>Vendor Letter Required For CC Increase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Needs validation</fullName>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>Yes - Upon request</fullName>
                </value>
                <value>
                    <fullName>Contract silent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_level_is_the_Consumer_Price_Index2__c</fullName>
        <label>What level is the Consumer Price Index?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Awaiting Infomation</fullName>
                    <default>true</default>
                    <label>Awaiting Infomation</label>
                </value>
                <value>
                    <fullName>U.S. City Average</fullName>
                </value>
                <value>
                    <fullName>Region</fullName>
                </value>
                <value>
                    <fullName>Local Area</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_level_is_the_Consumer_Price_Index__c</fullName>
        <label>What level is the Consumer Price Index?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Awaiting Infomation</fullName>
                    <default>true</default>
                    <label>Awaiting Infomation</label>
                </value>
                <value>
                    <fullName>U.S. City Average</fullName>
                </value>
                <value>
                    <fullName>Region</fullName>
                </value>
                <value>
                    <fullName>Local Area</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_type_of_customer_communication_is_r__c</fullName>
        <label>Type cust comm req&apos;d permit sku delete</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>None/Contract Silent</fullName>
                </value>
                <value>
                    <fullName>Notification and customer approval</fullName>
                </value>
                <value>
                    <fullName>Notification only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Which_Consumer_Price_Index_local_area2__c</fullName>
        <label>Which Consumer Price Index local area?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Awaiting Information</fullName>
                    <default>true</default>
                    <label>Awaiting Information</label>
                </value>
                <value>
                    <fullName>Chicago-Gary-Kenosha, IL-IN-WI</fullName>
                </value>
                <value>
                    <fullName>Los Angeles-Riverside-Orange County, CA</fullName>
                </value>
                <value>
                    <fullName>New York-Northern NJ-Long Island, NY-NJ-CT-PA</fullName>
                </value>
                <value>
                    <fullName>Atlanta, GA</fullName>
                </value>
                <value>
                    <fullName>Boston-Brockton-Nashua, MA-NH-ME-CT</fullName>
                </value>
                <value>
                    <fullName>Cleveland-Akron, OH</fullName>
                </value>
                <value>
                    <fullName>Dallas-Fort Worth, TX</fullName>
                </value>
                <value>
                    <fullName>Detroit-Ann Arbor-Flint, MI</fullName>
                </value>
                <value>
                    <fullName>Houston-Galveston-Brazoria, TX</fullName>
                </value>
                <value>
                    <fullName>Miami-Fort Lauderdale, FL</fullName>
                </value>
                <value>
                    <fullName>Philadelphia-Wilmington-Atlantic City, PA-NJ-DE-MD</fullName>
                </value>
                <value>
                    <fullName>San Francisco-Oakland-San Jose, CA</fullName>
                </value>
                <value>
                    <fullName>Seattle-Tacoma-Bremerton, WA</fullName>
                </value>
                <value>
                    <fullName>Washington-Baltimore, DC-MD-VA-WV</fullName>
                </value>
                <value>
                    <fullName>Anchorage, AK</fullName>
                </value>
                <value>
                    <fullName>Cincinnati-Hamilton, OH-KY-IN</fullName>
                </value>
                <value>
                    <fullName>Denver-Boulder-Greeley, CO</fullName>
                </value>
                <value>
                    <fullName>Honolulu, HI</fullName>
                </value>
                <value>
                    <fullName>Kansas City, MO-KS</fullName>
                </value>
                <value>
                    <fullName>Milwaukee-Racine, WI</fullName>
                </value>
                <value>
                    <fullName>Minneapolis-St, Paul, MN-WI</fullName>
                </value>
                <value>
                    <fullName>Pittsburgh, PA</fullName>
                </value>
                <value>
                    <fullName>Portland-Salem, OR-WA</fullName>
                </value>
                <value>
                    <fullName>St. Louis, MO-IL</fullName>
                </value>
                <value>
                    <fullName>San Diego, CA</fullName>
                </value>
                <value>
                    <fullName>Tampa-St. Petersburg-Clearwater, FL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Which_Consumer_Price_Index_local_area__c</fullName>
        <label>Which Consumer Price Index local area?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Awaiting Information</fullName>
                    <default>true</default>
                    <label>Awaiting Information</label>
                </value>
                <value>
                    <fullName>Chicago-Gary-Kenosha, IL-IN-WI</fullName>
                </value>
                <value>
                    <fullName>Los Angeles-Riverside-Orange County, CA</fullName>
                </value>
                <value>
                    <fullName>New York-Northern NJ-Long Island, NY-NJ-CT-PA</fullName>
                </value>
                <value>
                    <fullName>Atlanta, GA</fullName>
                </value>
                <value>
                    <fullName>Boston-Brockton-Nashua, MA-NH-ME-CT</fullName>
                </value>
                <value>
                    <fullName>Cleveland-Akron, OH</fullName>
                </value>
                <value>
                    <fullName>Dallas-Fort Worth, TX</fullName>
                </value>
                <value>
                    <fullName>Detroit-Ann Arbor-Flint, MI</fullName>
                </value>
                <value>
                    <fullName>Houston-Galveston-Brazoria, TX</fullName>
                </value>
                <value>
                    <fullName>Miami-Fort Lauderdale, FL</fullName>
                </value>
                <value>
                    <fullName>Philadelphia-Wilmington-Atlantic City, PA-NJ-DE-MD</fullName>
                </value>
                <value>
                    <fullName>San Francisco-Oakland-San Jose, CA</fullName>
                </value>
                <value>
                    <fullName>Seattle-Tacoma-Bremerton, WA</fullName>
                </value>
                <value>
                    <fullName>Washington-Baltimore, DC-MD-VA-WV</fullName>
                </value>
                <value>
                    <fullName>Anchorage, AK</fullName>
                </value>
                <value>
                    <fullName>Cincinnati-Hamilton, OH-KY-IN</fullName>
                </value>
                <value>
                    <fullName>Denver-Boulder-Greeley, CO</fullName>
                </value>
                <value>
                    <fullName>Honolulu, HI</fullName>
                </value>
                <value>
                    <fullName>Kansas City, MO-KS</fullName>
                </value>
                <value>
                    <fullName>Milwaukee-Racine, WI</fullName>
                </value>
                <value>
                    <fullName>Minneapolis-St, Paul, MN-WI</fullName>
                </value>
                <value>
                    <fullName>Pittsburgh, PA</fullName>
                </value>
                <value>
                    <fullName>Portland-Salem, OR-WA</fullName>
                </value>
                <value>
                    <fullName>St. Louis, MO-IL</fullName>
                </value>
                <value>
                    <fullName>San Diego, CA</fullName>
                </value>
                <value>
                    <fullName>Tampa-St. Petersburg-Clearwater, FL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Which_Consumer_Price_Index_region2__c</fullName>
        <label>Which Consumer Price Index region?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Awaiting Information</fullName>
                    <default>true</default>
                    <label>Awaiting Information</label>
                </value>
                <value>
                    <fullName>Northeast</fullName>
                </value>
                <value>
                    <fullName>Midwest (formerly North Central)</fullName>
                </value>
                <value>
                    <fullName>South</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Which_Consumer_Price_Index_region__c</fullName>
        <label>Which Consumer Price Index region?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Awaiting Information</fullName>
                    <default>true</default>
                    <label>Awaiting Information</label>
                </value>
                <value>
                    <fullName>Northeast</fullName>
                </value>
                <value>
                    <fullName>Midwest (formerly North Central)</fullName>
                </value>
                <value>
                    <fullName>South</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Which_Producer_Price_Index_structure2__c</fullName>
        <label>Which Producer Price Index structure?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Awaiting Information</fullName>
                    <default>true</default>
                    <label>Awaiting Information</label>
                </value>
                <value>
                    <fullName>Industry</fullName>
                </value>
                <value>
                    <fullName>Commodity</fullName>
                </value>
                <value>
                    <fullName>Commodity-based Stage-of-processing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Which_Producer_Price_Index_structure__c</fullName>
        <label>Which Producer Price Index structure?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Awaiting Information</fullName>
                    <default>true</default>
                    <label>Awaiting Information</label>
                </value>
                <value>
                    <fullName>Industry</fullName>
                </value>
                <value>
                    <fullName>Commodity</fullName>
                </value>
                <value>
                    <fullName>Commodity-based Stage-of-processing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Contract Pricing Terms</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Contract Pricing Terms Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Pricing Terms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>RelevantCustomerLevelCheck</fullName>
        <active>true</active>
        <errorConditionFormula>IF((Account_Level__c ==&apos;Parent&apos; &amp;&amp; ISPICKVAL(Relevant_Customer_Level__c, &apos;Grandparent&apos;)), 
true, 
IF((Account_Level__c ==&apos;Child&apos; &amp;&amp; (ISPICKVAL(Relevant_Customer_Level__c, &apos;Grandparent&apos;) || 
ISPICKVAL(Relevant_Customer_Level__c, &apos;Parent&apos;))), 
true, 
IF((Account_Level__c ==&apos;Standalone&apos; &amp;&amp; (ISPICKVAL(Relevant_Customer_Level__c, &apos;Grandparent&apos;) || 
ISPICKVAL(Relevant_Customer_Level__c, &apos;Parent&apos;)||
ISPICKVAL(Relevant_Customer_Level__c, &apos;Child&apos;))), 
true, false) ))</errorConditionFormula>
        <errorDisplayField>Relevant_Customer_Level__c</errorDisplayField>
        <errorMessage>Relevant Customer Level cannot be higher than the Account level</errorMessage>
    </validationRules>
</CustomObject>